# eaagent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
eaagent/: agent.py  memory.py
eaagent/a_plus_plus/: __init__.py  eaagent_wrapper.py  graph.py  prompt_builder.py  state.py  tools.py  visualization.py
eaagent/tools/: tushare_minute.py
examples/: futures_minute_example.py  tushare_example.py
tests/: test_a_plus_plus.py  test_agent_auto_memory.py  test_agent_memory.py  test_futures_minute_example.py  test_memory.py  test_tushare_minute.py
