[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eaagent"
version = "0.1.0"
description = "Easy ReAct Agent powered by Grok (xAI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]
tushare = [
    "tushare>=1.2.89",
    "pandas>=2.0.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eaagent*"]
exclude = ["artifacts*", "tests*", "docs*"]

[tool.black]
line-length = 100
